--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Rui-Yang Ju (鞠睿阳)"
-description              : "Master Student in National Taiwan University"
+description              : "Rui-Yang Ju Homepage (鞠睿阳的个人主页)"
 repository               : "Ruiyangju/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
