--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ google_scholar_stats_use_cdn : true
 google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
-google_site_verification :  fznQmBPwt1N_hNz2TEXirkFSSeVCWGc-9SfbpUon5lo
+google_site_verification :  "fznQmBPwt1N_hNz2TEXirkFSSeVCWGc-9SfbpUon5lo"
 bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
 baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
