--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Rui-Yang Ju (鞠睿阳)"
-description              : "Master student in National Taiwan University. Focusing on DL, CV and IP."
+description              : "Focusing on Deep Learning, Computer Vision and Image Processing."
 repository               : "Ruiyangju/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -21,10 +21,10 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Lorem ipsum"
+  name             : "Rui-Yang Ju (鞠睿阳)"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Lorem ipsum College"
-  location         : "Beijing, China"
+  bio              : "National Taiwan University"
+  location         : "Taipei, Taiwan"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
