--- a/_config.yml
+++ b/_config.yml
@@ -43,8 +43,8 @@ author:
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : # e.g., "linkedin username"
-  dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
+  linkedin         : "ruiyangju"
+  dblp             : "https://dblp.org/pid/300/8258.html"
   orcid            : "https://orcid.org/0000-0003-2240-1377"
   pinterest        :
   soundcloud       :
