--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,14 +9,11 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
+  - title: "Patents"
+    url: "/#-patents"
+
   - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+    url: "/#-honors and awards"
 
   - title: "Educations"
     url: "/#-educations"
-
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
-
-  - title: "Internships"
-    url: "/#-internships"
