--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Patents"
     url: "/#-patents"
 
-  - title: "Honors and Awards"
-    url: "/#-honors and awards"
+  - title: "Honors"
+    url: "/#-honors"
 
   - title: "Educations"
     url: "/#-educations"
