--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,17 +3,11 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
-
   - title: "Publications"
     url: "/publications/"
 
-  - title: "Patents"
-    url: "/#-patents"
+  - title: "Research"
+    url: "/research/"
 
-  - title: "Honors"
-    url: "/#-honors"
-
-  - title: "Educations"
-    url: "/#-educations"
+  - title: "Dataset"
+    url: "/GRAZPEDWRI-DX_JU/"
