--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: "/publications/"
 
   - title: "Patents"
-    url: "/#-patents"
+    url: "/patents/"
 
   - title: "Honors"
     url: "/#-honors"
