--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: "/#about-me"
 
   - title: "News"
-    url: "/#-news"
+    url: "/#news"
 
   - title: "Research"
     url: "/#-research"
