--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   - title: "Professional Services"
     url: "/#professional-services"
 
-  - title: "Honors"
-    url: "/#honors"
+  - title: "Honors and Scholarships"
+    url: "/#honors and scholarships"
 
   - title: "Educations"
     url: "/#educations"
