--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: "/#professional-services"
 
   - title: "Honors and Scholarships"
-    url: "/#honors and scholarships"
+    url: "/#honors-and-scholarships"
 
   - title: "Educations"
     url: "/#educations"
