--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Rui-Yang Ju (鞠睿阳)"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "PhD Student in Kyoto University"
+  bio              : "Ph.D. Student in Kyoto University"
   location         : "Kyoto, Japan"
   employer         :
   pubmed           : 
