--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,14 +6,14 @@ main:
   - title: "News"
     url: "/#news"
     
-  - title: "Publications"
-    url: "/#publications"
+  - title: "Publication"
+    url: "/#publication"
 
-  - title: "Professional Services"
-    url: "/#professional-services"
+  - title: "Professional Service"
+    url: "/#professional-service"
 
-  - title: "Honors and Scholarships"
-    url: "/#honors-and-scholarships"
+  - title: "Scholarship"
+    url: "/#honors-and-scholarship"
 
-  - title: "Educations"
-    url: "/#educations"
+  - title: "Education"
+    url: "/#education"
