--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: "/#professional-service"
 
   - title: "Scholarship"
-    url: "/#honors-and-scholarship"
+    url: "/#scholarship"
 
   - title: "Education"
     url: "/#education"
