--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Professional Service"
     url: "/#professional-service"
 
-  - title: "Scholarship"
-    url: "/#scholarship"
+  - title: "Funding"
+    url: "/#funding"
 
   - title: "Education"
     url: "/#education"
