--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,3 +17,15 @@ main:
 
   - title: "Education"
     url: "/#education"
+
+  - title: "GRAZPEDWRI-DX_JU"
+    url: "/GRAZPEDWRI-DX_JU"
+
+  - title: "ToonifyGB"
+    url: "/#education"
+    
+  - title: "Education"
+    url: "/#education"    
+
+  - title: "Education"
+    url: "/#education"
