--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,14 +18,14 @@ main:
   - title: "Education"
     url: "/#education"
 
-  - title: "GRAZPEDWRI-DX_JU"
-    url: "/GRAZPEDWRI-DX_JU"
-
-  - title: "ToonifyGB"
-    url: "/ToonifyGB"
-    
-  - title: "MFE-GAN"
-    url: "/MFE-GAN"    
-
-  - title: "DKDS"
-    url: "/DKDS"
+  - title: "Project"
+    url: "/#project"
+    children:
+      - title: "GRAZPEDWRI-DX_JU"
+        url: "/GRAZPEDWRI-DX_JU"
+      - title: "ToonifyGB"
+        url: "/ToonifyGB"
+      - title: "MFE-GAN"
+        url: "/MFE-GAN"
+      - title: "DKDS"
+        url: "/DKDS"
