--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,7 @@ main:
     url: "/#education"
 
   - title: "Project"
+  url: "/"
     children:
       - title: "GRAZPEDWRI-DX_JU"
         url: "/GRAZPEDWRI-DX_JU"
