--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Rui-Yang Ju (鞠睿阳)"
-description              : "Focusing on Computer Vision and Natural language processing"
+description              : "Now Focusing on Kuzushiji Character Recognition."
 repository               : "ruiyangju/ruiyangju.github.io"
 google_scholar_stats_use_cdn : true
 
