--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,3 @@
-# main links links
 main:
   - title: "About Me"
     url: "/#about-me"
@@ -19,22 +18,24 @@ main:
     url: "/#education"
 
   - title: "Projects"
-    url: "/#projects"
-    children:
-      - title: "GRAZPEDWRI-DX_JU"
-        url: "/GRAZPEDWRI-DX_JU"
+    url: "/projects/"
 
-      - title: "ToonifyGB"
-        url: "/ToonifyGB"
 
-      - title: "GlassesGB"
-        url: "/GlassesGB"
+projects:
+  - title: "GRAZPEDWRI-DX_JU"
+    url: "/GRAZPEDWRI-DX_JU"
 
-      - title: "MFE-GAN"
-        url: "/MFE-GAN"
+  - title: "ToonifyGB"
+    url: "/ToonifyGB"
 
-      - title: "DKDS"
-        url: "/DKDS"
+  - title: "GlassesGB"
+    url: "/GlassesGB"
 
-      - title: "RG-KCR"
-        url: "/RG-KCR"
+  - title: "MFE-GAN"
+    url: "/MFE-GAN"
+
+  - title: "DKDS"
+    url: "/DKDS"
+
+  - title: "RG-KCR"
+    url: "/RG-KCR"
