--- a/_config.yml
+++ b/_config.yml
@@ -119,13 +119,13 @@ kramdown:
 
 # Defaults
 defaults:
-  # _pages
   - scope:
       path: ""
       type: pages
     values:
-      layout: default
+      layout: single
       author_profile: true
+
 
 
 # Sass/SCSS
