--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: defaults
+      layout: default
       author_profile: true
 
 
